--- a/.gitignore
+++ b/.gitignore
@@ -1,139 +1,66 @@
-# Build folders
-[Bb]in/
-[Oo]bj/
-[Ll]og/
-[Ll]ogs/
+# Ignore all bin/ and obj/ folders recursively
+**/[Bb]in/
+**/[Oo]bj/
 
-# Rider
-.idea/
+# Ignore all .csproj files recursively
+**/*.csproj
 
-# Visual Studio
-.vs/
-*.user
-*.suo
-*.sdf
-*.dbmdl
-*.opendb
-*.VC.db
+# Ignore all .sln (solution) files
+**/*.sln
 
-# Visual Studio Code
-.vscode/
-.history/
+# Ignore all user-specific and IDE-related files recursively
+**/*.user
+**/*.suo
+**/*.vspx
+**/*.vsmdi
+**/.vs/
+**/.vscode/
+**/.idea/
 
-# .NET specific
-project.lock.json
-project.fragment.lock.json
-artifacts/
+# Ignore packages, build artifacts and NuGet outputs
+**/packages/
+**/*.nupkg
+**/artifacts/
 
-# NuGet
-*.nupkg
-*.snupkg
-*.nuspec
-*.psmdcp
-*.nuproj
-packages/
-*.vsix
+# Ignore test results
+**/TestResults/
+**/*.trx
+**/*.coverage
+**/*.testsettings
 
-# Paket
-.paket/
-paket-files/
+# Ignore local DB files
+**/*.db
+**/*.sqlite
+**/*.sqlite3
 
-# Resharper
-_ReSharper*/
-*.[Rr]e[Ss]harper
-*.DotSettings.user
+# Ignore design and media files
+Design/
+**/*.psd
+**/*.ai
+**/*.xd
 
-# StyleCop
-StyleCopReport.xml
+# Ignore Xamarin/MAUI/Android/iOS output files
+**/*.apk
+**/*.aab
+**/*.ipa
+**/*.dll
+**/*.pdb
+**/*.so
+**/*.jar
+**/*.dex
 
-# TeamCity
-_TeamCity*
+# Ignore temp, backup, and system files
+**/*~
+**/*.tmp
+**/*.bak
+**/*.swp
+**/*.swo
+**/.DS_Store
+**/Thumbs.db
+**/ehthumbs.db
 
-# User-specific files
-*.userosscache
-*.sln.docstates
-
-# IIS
-*.vspscc
-*.vssscc
-*.publish.xml
-PublishProfiles/
-
-# SQL
-*.mdf
-*.ldf
-*.ndf
-
-# Backup & temporary files
-*~
-*.tmp
-*.bak
-*.old
-*.orig
-*.swp
-*.swo
-*.DS_Store
-Thumbs.db
-ehthumbs.db
-*.log
-
-# DotCover
-.idea/
-*.dotCover
-
-# Design files
-Design/Text_logo-xd.psd
-![Bb]in/Designs/*
-
-# Xamarin
-Xamimg/packages/
-*.apk
-*.ap_
-*.aab
-*.ipa
-*.plist
-*.xcodeproj/
-*.xcworkspace/
-*.xcuserstate
-*.xcuserdata/
-*.entitlements
-*.mobileprovision
-*.dsym
-*.crash
-*.nib
-*.storyboardc
-*.svg
-*.axml
-*.jar
-*.dex
-*.class
-*.so
-*.dll
-*.pdb
-*.mdb
-*.apk.*
-*.aab.*
-
-# MAUI
-Platforms/*/bin/
-Platforms/*/obj/
-
-# Local DB (LiteDB, SQLite, etc.)
-*.db
-*.sqlite
-*.sqlite3
-
-# Test Results
-TestResults/
-*.trx
-*.coverage
-*.coveragexml
-*.testsettings
-*.vsmdi
-*.testrunconfig
-
-# Others
-.env
-.env.*
-secrets.json
-appsettings.*.local.json
+# Ignore environment and config secrets
+**/.env
+**/.env.*
+**/secrets.json
+**/appsettings.*.local.json
